# Discord-Auto-Message-Sender

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  KNOWN_ISSUES.md  README.md  SUPPORT.md  config.example.json  eslint.config.mjs  messages.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.mts  vitest.config.mts
.github/workflows/: quality.yml
.omx/: metrics.json
.omx/logs/: turns-2026-04-02.jsonl  turns-2026-04-05.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
app/: index.html  tsconfig.json
app/src/: App.tsx  styles.css
contracts/desktop/: command-map.schema.json  diagnostics.schema.json  event.schema.json  log-entry.schema.json  notification-delivery.schema.json  sender-state.schema.json  setup.schema.json
docs/adr/: ADR-001-modular-monolith-boundaries.md  ADR-002-schema-first-desktop-contracts.md  ADR-003-frontend-controller-composition.md  ADR-004-remove-compatibility-barrels-and-preserve-native-shell.md
scripts/: build-sidecar.ts  check-boundaries.ts  check-file-sizes.ts  check-versions.ts  generate-desktop-contracts.ts  run-tests.js  smoke-packaged-app.ts
src/: bot.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  contracts.rs  main.rs  migrations.rs  notification_delivery.rs  runtime_paths.rs  sender_state.rs  sidecar_manager.rs  sidecar_process.rs  support_bundle.rs  tests.rs  token_store.rs
src-tauri/src/commands/: config.rs  mod.rs  notifications.rs  session.rs  state.rs  support.rs
src/cli/: wizard.ts
src/config/: manager.ts  schema.ts  store.ts
src/core/: client.ts  sender.ts  worker.ts
src/desktop/: bridge.ts  contracts.ts  runtime.ts  (+2 more)
(+159 files in other folders)
