[package]
name = "discord-auto-message-sender"
version = "0.1.0"
description = "Local-first desktop shell for Discord Auto Message Sender"
authors = ["OpenAI"]
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
