[package]
name = "discord-auto-message-sender"
version = "1.0.0"
description = "Local-first desktop shell for Discord Auto Message Sender"
authors = ["tana"]
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.1"
zip = { version = "8.3.1", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }
